--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Deploy image Async DataFlow channel sender
 on:
   push:
-    branches:
-      - fix/*
+    tags:
+      - 'sender_*' # Push events to matching sender_*, i.e. sender_1.5.0
 jobs:
   deploy:
     defaults:
