--- a/.github/workflows/release-streams.yml
+++ b/.github/workflows/release-streams.yml
@@ -1,13 +1,13 @@
-name: Deploy image Async DataFlow channel sender
+name: Deploy image Async DataFlow channel streams
 on:
   push:
     tags:
-      - 'sender_*' # Push events to matching sender_*, i.e. sender_1.5.0
+      - 'streams_*' # Push events to matching streams_*, i.e. streams_1.5.0
 jobs:
   deploy:
     defaults:
       run:
-        working-directory: channel-sender
+        working-directory: channel-streams
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@d171c3b028d844f2bf14e9fdec0c58114451e4bf
@@ -23,4 +23,4 @@ jobs:
       - name: Config Builder
         run: docker buildx create --name mbuilder && docker buildx use mbuilder
       - name: Docker Build Multiplatform
-        run: docker buildx build --platform linux/amd64 -t bancolombia/async-dataflow-channel-sender:${GITHUB_REF##*_} --push .
+        run: docker buildx build --platform linux/amd64 -t bancolombia/async-dataflow-channel-streams:${GITHUB_REF##*_} --push .
