--- a/channel-sender/config/config-local.yaml
+++ b/channel-sender/config/config-local.yaml
@@ -44,16 +44,18 @@ channel_sender_ex:
 
   no_start: false
   topology:
-    #strategy: Elixir.Cluster.Strategy.Gossip # for local development
-    strategy: Elixir.Cluster.Strategy.Kubernetes # for kubernetes
-    config: 
-      mode: :hostname
-      kubernetes_ip_lookup_mode: :pods
-      kubernetes_service_name: "adfsender-headless"
-      kubernetes_node_basename: "channel_sender_ex"
-      kubernetes_selector: "cluster=beam"
-      namespace: "sendernm"
-      polling_interval: 5000
+    strategy: Elixir.Cluster.Strategy.Gossip # for local development
+
+    # strategy: Elixir.Cluster.Strategy.Kubernetes # topology for kubernetes
+    # config: 
+    #   mode: :hostname
+    #   kubernetes_ip_lookup_mode: :pods
+    #   kubernetes_service_name: "adfsender-headless"
+    #   kubernetes_node_basename: "channel_sender_ex"
+    #   kubernetes_selector: "cluster=beam"
+    #   namespace: "sendernm"
+    #   polling_interval: 5000
+
     # see https://github.com/bancolombia/async-dataflow/tree/master/channel-sender/deploy_samples/k8s
     # for more information about the kubernetes configuration with libcluser
 
