feat: changed how much time channel remains in waiting state

--- a/channel-sender/config/config-local.yaml
+++ b/channel-sender/config/config-local.yaml
@@ -16,8 +16,10 @@ channel_sender_ex:
   # before closing the channel
   socket_idle_timeout: 30000
 
-  # Specifies the maximum time (in milliseconds) that the supervisor waits 
-  # for child processes to terminate after sending it an exit signal (:shutdown).
+  # Specifies the maximum time (in milliseconds) that the Elixir supervisor waits 
+  # for child channel processes to terminate after sending it an exit signal 
+  # (:shutdown). This time is used by all gen_statem processes to perform clean up
+  # operations before shutting down.
   channel_shutdown_tolerance: 10000
 
   # Specifies the maximum drift time (in seconds) the channel process
@@ -41,6 +43,22 @@ channel_sender_ex:
   # Allowed max number of messages pending to be sent to a channel
   # received by sender while on waiting state (no socket connection)
   max_pending_queue: 100
+
+  # channel_shutdown_socket_disconnect: Defines the waiting time of the channel process
+  # after a socket disconnection, in case the client re-connects. The disconection can be
+  # clean or unclean. The channel process will wait for the client to re-connect before
+  #
+  # on_clean_close: time in seconds to wait before shutting down the channel process when a 
+  # client explicitlly ends the socket connection (clean close). A value of 0, will
+  # terminate the channel process immediately. This value should never be greater than max_age.
+  #
+  # on_disconnection: time in seconds to wait before shutting down the channel process when the
+  # connectin between the client and server accidentally or unintendedlly is interrupted. 
+  # A value of 0, will terminate the channel process immediately. This value should never 
+  # be greater than max_age.
+  channel_shutdown_socket_disconnect: 
+    on_clean_close: 30
+    on_disconnection: 300
 
   no_start: false
   topology:
