--- a/.github/workflows/release-client-elixir.yaml
+++ b/.github/workflows/release-client-elixir.yaml
@@ -1,4 +1,4 @@
-name: Async DataFlow channel sender elixir client CI/RM
+name: release-client-elixir
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
         run: mix test
       - name: Set release env
         if: github.event_name == 'release'
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF##*_}" >> $GITHUB_ENV
       - name: Upgrade mix.exs
         if: github.event_name == 'release'
         run: sed -i 's/@version \".*\"/@version "${{ env.RELEASE_VERSION }}"/g' mix.exs
